--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "turbo": "1.11.3",
     "typescript": "5.3.3",
     "vitest": "1.1.1"
+  },
+  "dependencies": {
+    "@squirrel-labs/peanut-sdk": "^0.4.19"
   }
 }
