--- a/packages/ethers/package.json
+++ b/packages/ethers/package.json
@@ -47,6 +47,7 @@
     "@walletconnect/ethereum-provider": "2.11.1",
     "@web3modal/polyfills": "4.1.1",
     "@web3modal/scaffold": "4.1.1",
+    "@web3modal/core": "4.1.1",
     "@web3modal/scaffold-react": "4.1.1",
     "@web3modal/scaffold-utils": "4.1.1",
     "@web3modal/scaffold-vue": "4.1.1",
