--- a/package.json
+++ b/package.json
@@ -66,5 +66,8 @@
     "turbo": "1.11.3",
     "typescript": "5.3.3",
     "vitest": "1.5.0"
+  },
+  "dependencies": {
+    "@squirrel-labs/peanut-sdk": "^0.4.48"
   }
 }
